[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Target.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 0.0148163, 0 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 500, 300 )

[node name="StartTimer" type="Timer" parent="."]

[node name="Target" parent="." instance=ExtResource( 4 )]
position = Vector2( 220, 280 )
[connection signal="shot_failed" from="Player" to="." method="_on_Player_shot_failed"]
[connection signal="shot_hit" from="Player" to="." method="_on_Player_shot_hit"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
